--- a/index.html
+++ b/index.html
@@ -3,7 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Search Your Images!</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h2><a id="logo" href="./index.html">Photon</a></h2>
+      <form class="search-form">
+        <input type="text" name="search" class="search-input" />
+        <button type="submit" class="submit-btn"></button>
+      </form>
+    </header>
+    <main>
+      <div class="gallery"></div>
+    </main>
+    <div class="nav-button">
+      <button class="more"></button>
+    </div>
+    <script scr="./app.js"></script>
+  </body>
 </html>
