--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <div class="nav-button">
       <button class="more"></button>
     </div>
-    <script scr="./app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
