--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="gallery"></div>
     </main>
     <div class="nav-button">
-      <button class="more"></button>
+      <button class="more">More</button>
     </div>
     <script src="app.js"></script>
   </body>
